--- a/layout.html
+++ b/layout.html
@@ -60,15 +60,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
         document.getElementById('done').classList.add('hide');
-        var doneCount = document.getElementById('done').getElementsByTagName('input').length;
-        document.getElementById('doneCount').innerHTML = doneCount;
-        var doneCount = document.getElementById('openTasks').getElementsByTagName('li').length;
-        document.getElementById('todoCount').innerHTML = doneCount;
         var count = 0;
 
         // localStorage.clear()
         console.log(localStorage);
         var done = localStorage.getItem('done');
+
         if (!done) {
             var done = {};
             localStorage.setItem('done', JSON.stringify(done));
@@ -108,6 +105,11 @@
             }
             count = localStorage.length;
         }
+
+        var doneCount = document.getElementById('done').getElementsByTagName('input').length;
+        document.getElementById('doneCount').innerHTML = doneCount;
+        var todoCount = document.getElementById('openTasks').getElementsByTagName('li').length;
+        document.getElementById('todoCount').innerHTML = todoCount;
 
         document.getElementById('form').appendChild(newTask(count));
 
