--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="source/Bootstrap/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="compiled/css/ui.css">
+    <link rel="stylesheet" href="dist/compiled/css/ui.css">
     <!-- font awesome stuff -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
@@ -90,17 +90,18 @@
                 draggable.setAttribute('id', place[i]);
                 draggable.setAttribute('class', 'dropzone');
                 draggable.setAttribute('draggable', true);
-                let reopenbtn = document.createElement('input')
+                let refreshbtn = document.createElement('input')
                 let attr = 'form-check-input reopen' + place[i];
-                reopenbtn.setAttribute('class', attr);
-                reopenbtn.setAttribute("type", 'checkbox');
-                reopenbtn.setAttribute("onchange", 'finished('+ place[i] +')');
-                let reopen = document.createElement('input');
-                reopen.setAttribute('type',"text");
-                reopen.setAttribute('class',"task "+ place[i]);
-                reopen.setAttribute('value', localStorage.getItem(place[i]));
-                draggable.appendChild(reopen);
-                draggable.appendChild(reopenbtn);
+                refreshbtn.setAttribute('class', attr);
+                refreshbtn.setAttribute("type", 'checkbox');
+                refreshbtn.setAttribute("onchange", 'finished('+ place[i] +')');
+                let refresh = document.createElement('input');
+                refresh.setAttribute('type',"text");
+                refresh.setAttribute('class',"task "+ place[i]);
+                refresh.setAttribute('value', localStorage.getItem(place[i]));
+                refresh.setAttribute('oninput',"typed(" + place[i] + ")");
+                draggable.appendChild(refresh);
+                draggable.appendChild(refreshbtn);
                 document.getElementById('openTasks').appendChild(draggable);
             }
             count = localStorage.length;
@@ -271,8 +272,6 @@
             } else {
                 localStorage.setItem(update, task);
             }
-
-            console.log(localStorage);
         }
 
         function finished(index) {
