--- a/layout.html
+++ b/layout.html
@@ -72,7 +72,21 @@
         }
 
         if (done.length > 4) {
-            console.log('done detected');
+            let values = JSON.parse(localStorage.getItem('done'));
+            for (const [key, value] of Object.entries(values)) {
+                let done = document.createElement('input');
+                done.setAttribute('type',"text");
+                done.setAttribute('class',"task "+ key);
+                done.setAttribute('value', value);
+                done.setAttribute('onchange',"typed(" + key + ")");
+                document.getElementById('done').appendChild(done);
+                let open = document.createElement('input')
+                let attr = 'form-check-input reopen' + key;
+                open.setAttribute('class', attr);
+                open.setAttribute("type", 'checkbox');
+                open.setAttribute("onclick", 'reopen('+ key +')');
+                document.getElementById('done').appendChild(open);
+            }
         } else {
             var done = {};
             localStorage.setItem('done', JSON.stringify(done));
@@ -107,7 +121,7 @@
             count = localStorage.length;
         }
 
-        var doneCount = document.getElementById('done').getElementsByTagName('input').length;
+        var doneCount = document.getElementById('done').getElementsByClassName('task').length;
         document.getElementById('doneCount').innerHTML = doneCount;
         var todoCount = document.getElementById('openTasks').getElementsByTagName('li').length;
         document.getElementById('todoCount').innerHTML = todoCount;
@@ -285,7 +299,6 @@
             var place = tasklist[index];
             var spot = taskrow[index];
             var btn = tasklistbtn[index];
-            console.log(tasklist, index);
 
             let entry = place.value;
 
