--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="source/Bootstrap/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="dist/compiled/css/ui.css">
+    <!-- <link rel="stylesheet" href="dist/compiled/css/ui.css"> -->
     <!-- font awesome stuff -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
@@ -23,10 +23,10 @@
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-    <!-- <style>
-.box{padding:10%}.hide{display:none}.title{display:flex;flex-direction:row;justify-content:space-around;margin-bottom:5px}.title .title-child{max-width:300px;display:flex;flex-direction:row;align-items:baseline;font-size:24px;color:gray;justify-content:center}.title .title-child p{margin:20px}.title .title-child .todo{padding:0px 7px;background-color:#add8e6;border-radius:50px}.active{border-bottom:1px blue solid;color:#a9a9a9}.inputs{width:100%;padding:0 5%}.inputs input::placeholder{padding-left:15px}ul{list-style:none;min-width:100%}input{flex:90%}input:focus::placeholder{color:rgba(0,0,0,0)}#done{text-decoration:line-through;color:red}.btn{margin-left:15px}.dropzone{min-width:fit-content}.task{width:75%}/*# sourceMappingURL=ui.css.map */
+    <style>
+.box{padding:10%}.hide{display:none}.title{display:flex;flex-direction:row;justify-content:space-around;margin-bottom:5px}.title .title-child{max-width:300px;display:flex;flex-direction:row;align-items:baseline;font-size:24px;color:gray;justify-content:center}.title .title-child p{margin:20px}.title .title-child .todo{padding:0px 7px;background-color:#add8e6;border-radius:50px}.active{border-bottom:1px blue solid;color:#a9a9a9}.inputs{width:100%;padding:0 5%}.inputs input::placeholder{padding-left:15px}ul{list-style:none;min-width:100%}input{flex:90%}input:focus::placeholder{color:rgba(0,0,0,0)}#done{text-decoration:line-through;color:red}.btn{margin-left:15px}.dropzone{min-width:fit-content}.task{width:75%;margin-right:8px;padding:3px;border:0;border-bottom:2px solid gray;outline:0}/*# sourceMappingURL=ui.css.map */
 
-    </style> -->
+    </style>
   </head>
   <body>
     <h2>Task Manager</h2>
